--- a/index_port_new.html
+++ b/index_port_new.html
@@ -89,11 +89,11 @@
 
             if (!isDeleting && charIndex === currentWord.length) {
                 isDeleting = true;
-                setTimeout(typeEffect, 1500); // Pause before deleting
+                setTimeout(typeEffect, 1500);
             } else if (isDeleting && charIndex === 0) {
                 isDeleting = false;
                 wordIndex = (wordIndex + 1) % words.length;
-                setTimeout(typeEffect, 1000); // Pause before typing next word
+                setTimeout(typeEffect, 1000);
             } else {
                 setTimeout(typeEffect, isDeleting ? 100 : 200);
             }
